JEDIT VERSION HISTORY

* Version 2.4pre5

+ New Features

- Digits will be highlighted if the HIGHLIGHT_DIGITS attribute is set to
  "TRUE" on a ruleset

+ Enhancements

- TokenMarker now uses a hashing algorithm to check against far fewer rules
  than previously. This should result in a 2-10x speed improvement! This is
  particularly noticable when loading files
- XMode documentation started

+ Bug Fixes

- Incremental search didn't beep if no match was found (since 2.4pre4)
- xmode.dtd didn't define attributes of KEYWORDS tag (since 2.4pre2)
- Inserting characters after using the splitting commands didn't work
  (since 2.4pre4)

* Version 2.4pre4

+ New Features

- New 'search bar' with incremental search support replaces QuickSearch
  field on toolbar
- New token types added: Token.{FUNCTION,MARKUP,DIGIT}
- New edit modes:
  - JMK
  - CSS (Mike Dillon)
  - Pascal (Kristian Ovaska)

+ Enhancements

- Improved Search & Replace and HyperSearch dialog boxes
- Utilities->Reload Edit Modes now works with the -nosettings switch
- If the plugin list cannot be loaded, the plugin manager now displays a more
  helpful error message telling the user to install the Firewall plugin if they
  are behind a firewall
- JARClassLoader now displays error messages in more friendly dialog boxes,
  instead of printing stuff to the activity log
- Buffer Options dialog box improvements
- PHP mode updates (Mike Dillon)
- PHP, JSP and ColdFusion now support inline JavaScript
- ASP, JavaScript, VBScript updates (Andre Kaplan)

+ Bug Fixes

- TeX mode had problems with some {...} sequences (since 2.4pre2)
- TeX mode didn't highlight \... in math mode correctly (since 2.4pre2)
- PHP mode didn't highlight scripts in <? ... ?> tags (since 2.4pre2)
- Fixed a bug in SyntaxDocument's line handling (since 2.4pre2)
- Automatic abbrev expansion didn't work (since 2.4pre1)
- BufferTabs had problems when buffers were closed sometimes (since 2.4pre1)