@@ -516,7 +516,7 @@ public class TextAreaPainter extends JComponent implements TabExpander
 		textArea.getLineText(line,textArea.lineSegment);
 		x = SyntaxUtilities.paintSyntaxLine(textArea.lineSegment,
 			tokenMarker.markTokens(textArea.lineSegment,line),
-			styles,this,gfx,x,y);
+			styles,this,gfx,getBackground(),x,y);
 
 		if(eolMarkers)
 		{
@@ -656,6 +656,9 @@ public class TextAreaPainter extends JComponent implements TabExpander
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.31  2000/04/09 03:14:14  sp
+ * Syntax token backgrounds can now be specified
+ *
  * Revision 1.30  2000/04/08 02:39:33  sp
  * New Token.MARKUP type, remove Token.{CONSTANT,VARIABLE,DATATYPE}
  *
@@ -687,14 +690,5 @@ public class TextAreaPainter extends JComponent implements TabExpander
  *
  * Revision 1.21  1999/11/28 00:33:07  sp
  * Faster directory search, actions slimmed down, faster exit/close-all
- *
- * Revision 1.20  1999/11/26 01:18:50  sp
- * Optimizations, splash screen updates, misc stuff
- *
- * Revision 1.19  1999/11/21 03:40:18  sp
- * Parts of EditBus not used by core moved to EditBus.jar
- *
- * Revision 1.18  1999/11/21 01:20:31  sp
- * Bug fixes, EditBus updates, fixed some warnings generated by jikes +P
  *
  */
