@@ -6,6 +6,7 @@ JEDIT VERSION HISTORY
 
 - Digits will be highlighted if the HIGHLIGHT_DIGITS attribute is set to
   "TRUE" on a ruleset
+- The background color of syntax tokens can now be specified (Andre Kaplan)
 
 + Enhancements
 
